# etoad

./: .gitignore  README.md  develop_record.txt  etoad.nix  etoad.sila.xml  plan.txt  pyproject.toml  requirements.txt  routine_simple_SWVscans.json  run_echem.py  setup.cfg  setup.py  test.py  test_general_optimization.ipynb
SilaEtoad/: server.py
SilaEtoad/feature_implementations/: etoad_impl.py
Tests/: DataAnalysis_Test.py  Diquat_Characterization.py  Potentiostat_Test.py  SamplingSystem_Test.py  Test_Cyclic_SWV.pkl  Test_Multi_CV.pkl  Workflow_Test.py  test_routine.json  wash_cell.py
Tests/test_settings/: logger_settings.json  potentiostat_settings.json  sampler_settings.json
olympus/: setup.py
olympus/src/olympus/: _version.py
olympus/src/olympus/datasets/: dataset.py
src/etoad/: WorkflowManager.py  __init__.py
src/etoad/DataAnalyzer/: DataAnalyzer.py
src/etoad/DataAnalyzer/AnalysisUtils/: DataVisualizer.py  __init__.py  baseline_detection.py  noise_estimation.py  peak_selection.py  significant_digits.py
src/etoad/DataAnalyzer/Methods/: CVAnalyzer.py  CV_Defaults.json  EChemDataAnalyzer.py  PulseTechniqueAnalyzer.py  PulsedTechniques_Defaults.json  __init__.py
src/etoad/HardwareController/: __init__.py
src/etoad/HardwareController/Potentiostat/: DLL_Binding.py  EChemController.py  (+1 more)
src/etoad/Interface/: GenericHandler.py  GraphicalInterface.py  SlackBotHandler.py  TkErrorHandling.py  __init__.py
src/etoad/Utils/: BitVersion.py  ConfigLoader.py  DropboxPath.py  Exceptions.py  FileHandling.py  ThreadWithReturn.py  Timestamps.py  __init__.py
(+23 files in other folders)
