[metadata]
name = etoad
description = A Python package for automated experimentation for electroanalytical techniques.
version = 0.4.7
authors =
  { name="Felix Strieth-Kalthoff", email="f.striethkalthoff@utoronto.ca" }

readme = "README.md"
license = MIT
license_file = LICENSE
classifiers =
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",

[options]
packages = etoad
python_requires = >3.6
package_dir =
    =src